--- a/Projeto1.ipynb
+++ b/Projeto1.ipynb
@@ -3809,10 +3809,10 @@
         "# Configurações de envio\n",
         "msg = em.Message()\n",
         "msg['Subject'] = \"Relatório de Vendas\" # ASSUNTO DO E-MAIL#\n",
-        "msg['From'] = 'pythomailuser@gmail.com' # E-MAIL QUE VAI ENVIAR O E-MAIL#\n",
+        "msg['From'] = ' ' # E-MAIL QUE VAI ENVIAR O E-MAIL#\n",
         "#\n",
-        "msg['To'] = 'wendel08031997@gmail.com'# E-MAIL QUE VAI RECEBER\n",
-        "password = 'fsxr kgse puca olom' # SENHA DO E-MAIL QUE VAI ENVIAR\n",
+        "msg['To'] = ' '# E-MAIL QUE VAI RECEBER\n",
+        "password = ' ' # SENHA DO E-MAIL QUE VAI ENVIAR\n",
         "msg.add_header('Content-Type', 'text/html') # Tipo/formato do conteúdo\n",
         "msg.set_payload(corpo_email ) # Corpo do email\n",
         "\n",
